--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="image.jpeg" alt="Logo" class="logo">
+        <img src="images/logo.png"alt="Logo" class="logo">
         <h2>Login</h2>
         <form action="/submit-login" method="post">
             <input type="text" name="username" placeholder="Username" required>
