--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             width: 300px;
         }
         .logo {
-            width: 100px;
+            width: 100px; /* Adjust the logo size */
             margin-bottom: 20px;
         }
         input[type="text"], input[type="password"] {
@@ -59,7 +59,8 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="images/logo.png"alt="Logo" class="logo">
+        <!-- Replace with your GitHub hosted logo URL -->
+        <img src="https://github.com/dhanushbraja/Dhanush/raw/main/images/logo.png" alt="Logo" class="logo">
         <h2>Login</h2>
         <form action="/submit-login" method="post">
             <input type="text" name="username" placeholder="Username" required>
@@ -70,3 +71,4 @@
     </div>
 </body>
 </html>
+
