--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <body>
     <div class="login-container">
         <!-- Replace with your GitHub hosted logo URL -->
-        <img src="https://github.com/dhanushbraja/Dhanush/raw/main/images/logo.png" alt="Logo" class="logo">
+        <img src="logo.png" alt="Logo" class="logo">
         <h2>Login</h2>
         <form action="/submit-login" method="post">
             <input type="text" name="username" placeholder="Username" required>
