--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="login-container">
-        <!-- Replace with your GitHub hosted logo URL -->
+        <!-- Replace with your logo URL or local path -->
         <img src="logo.png" alt="Logo" class="logo">
         <h2>Login</h2>
         <form action="/submit-login" method="post">
@@ -71,4 +71,3 @@
     </div>
 </body>
 </html>
-
